--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,8 +5,14 @@
 }
 
 #side-bar {
+  position: fixed;
   grid-column: 1/2;
   height: 100vh;
+  width: 15%;
+}
+
+#center-after {
+  grid-column: 2/3;
 }
 
 #right-top {
