--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,12 +1,11 @@
 #side-bar {
     display: grid;
-    grid-template-columns: 100%;
     grid-template-rows: 10% 70% 20%;
     border-right: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 #side-bar p {
-    margin: 0;
+    margin: 0 3px;
 }
 
 #start-part {
@@ -20,7 +19,7 @@
 
 #mid-part {
     width: 80%;
-    margin: 10% 10%;
+    margin: 10% 10% 10% 8%;
     grid-column: 1/2;
     grid-row: 2/3;
     display: flex;
