--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -1,5 +1,6 @@
 #content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     grid-column: 2/3;
     grid-row: 2/3;
