--- a/src/Components/MorePopUp/MorePopUp.css
+++ b/src/Components/MorePopUp/MorePopUp.css
@@ -13,5 +13,23 @@
 }
 
 .anchor {
-    margin: 13px 8px;
+    margin: 6px 75px 3px 15px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    width: 83%;
+    height: 50px;
+    border-radius: 10px;
+}
+
+.anchor:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+    width: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
