--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,10 +1,11 @@
 #side-bar {
     display: grid;
     grid-template-rows: 10% 70% 20%;
-    border-right: 1px solid rgba(0, 0, 0, 0.4);
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 #side-bar p {
+    font-size: 14px;
     margin: 0 3px;
 }
 
