Adding Profile Page

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,4 +1,9 @@
 #side-bar {
+    position: fixed;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    height: 100vh;
+    width: 16%;
     display: grid;
     grid-template-rows: 10% 70% 20%;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
