--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,26 +1,6 @@
 .App {
   background-color: white;
   display: grid;
-  grid-template-columns: 16% 55% 28%;
-  grid-template-rows: 20vh 1fr;
-}
-
-#side-bar {
-  position: fixed;
-  grid-column: 1/2;
-  grid-row: 1/3;
-  height: 100vh;
-  width: 16%;
-}
-
-#stories-bar {
-  grid-row: 1/2;
-  grid-column: 3/3;
-}
-
-#right-top {
-  grid-column: 3/4;
-  grid-row: 1/3;
-  margin-top: 5vh;
-  margin-right: 30%;
+  grid-template-columns: 16% 84%;
+  grid-template-rows: 1fr;
 }
