--- a/src/Components/ProfilePage/UppperSide/UpperSide.css
+++ b/src/Components/ProfilePage/UppperSide/UpperSide.css
@@ -9,10 +9,10 @@
 }
 
 .profile-picture {
-    width: 170px;
-    height: 170px;
+    width: 160px;
+    height: 160px;
     padding: 5px;
-    border: 1px solid rgba(82, 82, 82, 0.5);
+    border: 3px solid rgba(82, 82, 82, 0.3);
     border-radius: 50%;
 }
 
@@ -37,4 +37,8 @@
 .settings-img {
     width: 25px;
     height: 25px;
+}
+
+.settings-img:hover {
+    cursor: pointer;
 }
