--- a/src/Components/ProfilePage/LowerSide/LowerSide.css
+++ b/src/Components/ProfilePage/LowerSide/LowerSide.css
@@ -6,6 +6,14 @@
     flex-direction: column;
 }
 
+.lower-side-saved {
+    grid-row: 2/3;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 nav {
     width: 500px;
     display: flex;
@@ -14,8 +22,17 @@ nav {
 }
 
 nav a {
+    font-size: 14px;
+    font-weight: 500;
     border-top: 1px solid white;
+    padding-top: 15px;
     margin-right: 200px;
+    display: flex;
+    align-items: center;
+}
+
+nav a:hover {
+    cursor: pointer;
 }
 
 nav p {
@@ -30,6 +47,13 @@ nav img {
 #posts {
     margin: 15px 0;
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+#saved {
+    margin: 15px 0;
+    display: none;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
