--- a/src/Components/Stories/Stories.css
+++ b/src/Components/Stories/Stories.css
@@ -21,6 +21,6 @@
     width: 55px;
     height: 55px;
     padding: 1px;
-    border: 3px solid rgba(128, 0, 81, 0.8);;
+    border: 3px solid rgba(128, 0, 81, 0.8);
     border-radius: 50%;
 }
