--- a/src/Components/MessagesPage/MessagesPage.css
+++ b/src/Components/MessagesPage/MessagesPage.css
@@ -15,7 +15,7 @@
     height: 92%;
     display: grid;
     grid-template-columns: 35% 65%;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
 
@@ -23,7 +23,7 @@
     grid-column: 1/2;
     height: 100%;
     width: 100%;
-    border-right: 1px solid rgba(0, 0, 0, 0.3);
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
     display: grid;
     grid-template-rows: 10% 90%;
 }
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .accounts {
@@ -56,10 +56,10 @@
     margin: 0 10px;
     border: 0px;
     border-radius: 60%;
-    border: 1px solid rgb(191, 191, 191);
+    border: 1px solid rgb(200, 200, 200);
 }
 
-.inner-profile h5 {
+.inner-profile h5, .inner-profile h4 {
     margin: 0;
 }
 
@@ -70,9 +70,86 @@
 }
 
 .messages {
+    box-sizing: border-box;
     grid-column: 2/3;
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-rows: 10% 90%;
+}
+
+.messages .account-messages {
+    grid-row: 1/2;
+    height: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin: 0;
+}
+
+.messages-chat {
+    box-sizing: border-box;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-rows: 90% 10%;
+}
+
+.messages-show {
+    grid-row: 1/2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.message {
+    box-sizing: border-box;
+    background-color: #F2F3F5;
+    font-size: 14px;
+    width: 200px;
+    padding: 7px;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+.you {
+    background-color: white;
+    align-self: flex-start;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.me {
+    background-color: #F2F3F5;
+    align-self: flex-end;
+    border: 0px;
+}
+
+
+.messages-input {
+    box-sizing: border-box;
+    grid-row: 2/3;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.messages-input input {
+    width: 75%;
+    height: 35px;
+    padding: 0 30px;
+    border-radius: 25px;
+    margin: 15px 0;
+}
+
+.messages-input button {
+    cursor: pointer;
+    background-color: #f2f3f500;
+    position: relative;
+    right: 40px;
+    width: 0px;
+    border: 0px;
+}
+
+.messages-input img {
+    width: 30px;
 }
