--- a/src/Components/LogIn/LogIn.css
+++ b/src/Components/LogIn/LogIn.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     height: 340px;
     padding: 20px 55px;
-    border: 1px solid rgb(168, 168, 168);
+    border: 1px solid rgb(206, 206, 206);
     border-radius: 2px;
     margin-top: 140px;
 }
@@ -25,7 +25,7 @@
 }
 
 .log-in input {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(248, 248, 248);
     font-size: 16px;
     padding: 10px;
     border: 1px solid black;
@@ -36,7 +36,9 @@
 .log-in button {
     cursor: pointer;
     background-color: #77A7FF;
+    color: white;
     font-size: 16px;
+    font-weight: 600;
     padding: 10px;
     border: 0px;
     border-radius: 5px;
